objects/FieloCH__TeamChallenge__c.object
<CustomObject>
    <fields>
        <fullName>FieloCH__Challenge__c</fullName>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Teams Challenge</relationshipLabel>
        <relationshipName>TeamsChallenge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCH__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accomplished</fullName>
                </value>
                <value>
                    <fullName>Not Accomplished</fullName>
                </value>
                <value>
                    <fullName>Unsubscribe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>FieloCH__Team__c</referenceTo>
        <relationshipLabel>Challenges</relationshipLabel>
        <relationshipName>TeamsChallenge</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Challenge</label>
    <nameField>
        <displayFormat>TCH-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams Challenge</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>